--- a/page/navigate/index.wxml
+++ b/page/navigate/index.wxml
@@ -4,13 +4,14 @@
     <view class="navigator-arrow"></view>
   </navigator>
 
+  <navigator url="../qiniu/index" class="navigator">
+    <view class="navigator-text">七牛云图片上传</view>
+    <view class="navigator-arrow"></view>
+  </navigator>
+
   <!-- <navigator url="../ocr/index" class="navigator">
     <view class="navigator-text">车牌识别</view>
     <view class="navigator-arrow"></view>
   </navigator> -->
-  
-   <navigator url="../demo/demo" class="navigator">
-    <view class="navigator-text">示例</view>
-    <view class="navigator-arrow"></view>
-  </navigator> 
+
 </view>
