完善我的页面

--- a/page/user/index.wxml
+++ b/page/user/index.wxml
@@ -1,13 +1,25 @@
-<view>
-  <view wx:if="{{hasUserInfo === true}}">
-    <image class="userinfo-avatar" src="{{userInfo.avatarUrl}}"></image>
-    <text class="userinfo-nickname">{{userInfo.nickName}}</text>
+<view class="head">
+  <view class="user">
+    <view wx:if="{{hasUserInfo === true}}">
+      <image class="userinfo-avatar" src="{{userInfo.avatarUrl}}"></image>
+    </view>
+    <view wx:else>
+      <button class="userinfo-avatar" open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="bindGetUserInfo"></button>
+    </view>
   </view>
-  <view wx:else>
-    <image class="userinfo-avatar" src="../../../image/nologin.png"></image>
+  <view class="nickname">
+    <text>{{userInfo.nickName}}</text>
   </view>
 </view>
-<view class="btn-area">
-  <button open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="bindGetUserInfo">获取用户信息</button>
-  <button bindtap="clear">清空</button>
+
+<view class="area">
+  <navigator url="setting/index" class="navigator">
+  <image src='setting.png' class="settingImage"></image>
+    <view class="navigator-text">通用设置</view>
+    <view class="navigator-arrow"></view>
+  </navigator>
+  <view class="bottom">
+    <button class='btn' bindtap='getBarcode'>小程序码</button>
+    <button class='btn' bindtap="clear">清除缓存</button>
+  </view>
 </view>
