--- a/page/calendar/index.wxss
+++ b/page/calendar/index.wxss
@@ -1,94 +1,98 @@
-.calendar-root{
-    font-family: simhei;
-    background: #F8F8F8;
-    height:100%;
-    margin-top: 30rpx;
-
+.calendar-root {
+  font-family: simhei;
+  background: #f8f8f8;
+  height: 100%;
+  margin-top: 30rpx;
 }
 
-.calendar-navbar{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    /* background: #fff; */
-    height: 83rpx;
-}
-.calendar-navbar-button{
-    flex-grow: 1;
-    width: 100rpx;
-    height: 50rpx;
-    text-align: center;
-    font-size: 36rpx;
-}
-.calendar-navbar-date{
-    flex-grow: 1;
-    width: 150rpx;
-    height: 50rpx;
-    text-align: center;
-    font-size: 30rpx;
+.calendar-navbar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* background: #fff; */
+  height: 83rpx;
 }
 
-.calendar-head{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 80rpx;
-    /* background: #fff; */
-    font-size: 35rpx;
-    margin-top: 30rpx;
-}
-.calendar-head view{
-    text-align: center;
-    flex:1;
+.calendar-navbar-button {
+  flex-grow: 1;
+  width: 100rpx;
+  height: 50rpx;
+  text-align: center;
+  font-size: 36rpx;
 }
 
-.calendar-body{
-    /* background: #fff; */
-}
-.calendar-body-rows{
-    display: flex;
-    align-items: center;
-    height: 98rpx;
-    padding: 0 4rpx 8rpx;
-}
-.calendar-body-cols{
-    display: flex;
-    flex: 1;
-    align-items: center;
-    height: 100%;
-    padding: 0 4rpx;
-}
-.calendar-body-item{
-    display: block;
-    background: #fff;
-    width: 100%;
-    height: 100%;
-}
-.calendar-body-item-select{
- display: block;
-    background: #1AAD19;
-    width: 100%;
-    height: 100%;
-    color: white;
+.calendar-navbar-date {
+  flex-grow: 1;
+  width: 150rpx;
+  height: 50rpx;
+  text-align: center;
+  font-size: 30rpx;
 }
 
-.calendar-body-day{
-    text-align: center;
-}
-.calendar-body-dayex{
-    text-align: center;
-    font-size: 25rpx;
+.calendar-head {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80rpx;
+  /* background: #fff; */
+  font-size: 35rpx;
+  margin-top: 30rpx;
 }
 
-.calendar-detail{
-     margin-left: 200rpx; 
-     margin-top: 30rpx;
+.calendar-head view {
+  text-align: center;
+  flex: 1;
 }
-.calendar-detail-day{
-    display:inline;
-    position: absolute;
-    margin-left: 80rpx;
-    font-size: 100rpx;
-    font-weight: bold;
-    color: red;
+
+.calendar-body-rows {
+  display: flex;
+  align-items: center;
+  height: 98rpx;
+  padding: 0 4rpx 8rpx;
+}
+
+.calendar-body-cols {
+  display: flex;
+  flex: 1;
+  align-items: center;
+  height: 100%;
+  padding: 0 4rpx;
+}
+
+.calendar-body-item {
+  display: block;
+  background: #fff;
+  width: 100%;
+  height: 100%;
+}
+
+.calendar-body-item-select {
+  display: block;
+  background: #1aad19;
+  width: 100%;
+  height: 100%;
+  color: white;
+}
+
+.calendar-body-day {
+  text-align: center;
+}
+
+.calendar-body-dayex {
+  text-align: center;
+  font-size: 25rpx;
+}
+
+.calendar-detail {
+  margin-left: 200rpx;
+  margin-top: 30rpx;
+}
+
+.calendar-detail-day {
+  display: inline;
+  position: absolute;
+  margin-left: 80rpx;
+  font-size: 100rpx;
+  font-weight: bold;
+  color: red;
 }
