--- a/page/pay/qrcode/qrcode.wxss
+++ b/page/pay/qrcode/qrcode.wxss
@@ -7,7 +7,7 @@
   justify-content: center;
   align-items: center;
   padding-top: 30rpx;
-  background-color: #F9F9F9;
+  background-color: #F7762C;
 }
 
 page{
@@ -26,7 +26,7 @@ page{
 .qrcode {
   width: 300px;
   height: 300px;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   position: relative;
 }
 
@@ -59,4 +59,9 @@ page{
   color: gray;
   flex-direction: column;
   text-align: center;
+}
+.payImg{
+  margin-top: 8rpx;
+  width: 150rpx;
+  height: 62rpx;
 }
